[gd_scene load_steps=9 format=3 uid="uid://dtoj7nquclhut"]

[ext_resource type="Script" uid="uid://qapkyy7qqf32" path="res://scripts/huds/tutorial_container.gd" id="1_4x1nh"]
[ext_resource type="Texture2D" uid="uid://dsycxsjkjuyer" path="res://assets/keys/keyboard_arrows.png" id="1_8y4or"]
[ext_resource type="Texture2D" uid="uid://bj304es7f207" path="res://assets/keys/keyboard_space.png" id="2_4x1nh"]
[ext_resource type="Texture2D" uid="uid://dq1di2jet7on5" path="res://assets/keys/keyboard_shift_icon.png" id="3_if63f"]
[ext_resource type="Texture2D" uid="uid://nv12y8xlfhqm" path="res://assets/keys/keyboard_z.png" id="4_uv4uy"]
[ext_resource type="Texture2D" uid="uid://cfrppjymbsk8j" path="res://assets/keys/mouse_left.png" id="5_ptalm"]
[ext_resource type="Texture2D" uid="uid://cdgft6unqnadh" path="res://assets/keys/keyboard_x.png" id="7_4mrv5"]
[ext_resource type="Texture2D" uid="uid://blqq75ca7asrx" path="res://assets/keys/mouse_right.png" id="8_8cn7g"]

[node name="TutorialContainer" type="VBoxContainer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.0
offset_top = -295.0
offset_right = 68.0
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_4x1nh")
textures_move = Array[Texture]([ExtResource("1_8y4or")])
textures_fire = Array[Texture]([ExtResource("2_4x1nh"), ExtResource("4_uv4uy"), ExtResource("5_ptalm")])
textures_special = Array[Texture]([ExtResource("3_if63f"), ExtResource("7_4mrv5"), ExtResource("8_8cn7g")])

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0

[node name="MoveTextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_8y4or")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "move"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0

[node name="FireTextureRect" type="TextureRect" parent="HBoxContainer2"]
layout_mode = 2
texture = ExtResource("2_4x1nh")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "fire"

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0

[node name="SpecialTextureRect" type="TextureRect" parent="HBoxContainer3"]
layout_mode = 2
texture = ExtResource("3_if63f")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "special"

[node name="LoopTimer" type="Timer" parent="."]
autostart = true

[node name="CloseTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[connection signal="timeout" from="LoopTimer" to="." method="_on_loop_timer_timeout"]
[connection signal="timeout" from="CloseTimer" to="." method="_on_close_timer_timeout"]
